<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="winapp.hajikadir.customer.activity.RegistrationActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:fillViewport="true"
        android:scrollbars="none"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="220dip"
                android:padding="10dip"
                android:layout_margin="5dip"
                android:background="@drawable/ic_layout_bg"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dip"
                    android:gravity="center"
                    android:background="@color/view_micro_line_bg_color"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dip"
                        android:src="@mipmap/ic_user_icon"
                        />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dip"
                        android:gravity="center|left"
                        android:text="@string/user" />
                </LinearLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_next"
                        android:imeOptions="actionNext"
                        android:textSize="@dimen/text_size_medium"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textColorHint="@color/color_app_bg"
                        android:textColor="@color/colorDarkGrey" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:imeActionId="@+id/password"
                        android:imeActionLabel="@string/action_next"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textSize="@dimen/text_size_medium"
                        android:textColorHint="@color/color_app_bg"
                        android:textColor="@color/colorDarkGrey" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        android:textSize="@dimen/text_size_medium"
                        android:imeActionId="@+id/confirm_password"
                        android:imeActionLabel="@string/action_next"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColorHint="@color/color_app_bg"
                        android:textColor="@color/colorDarkGrey" />

                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="160dip"
                android:padding="10dip"
                android:layout_margin="5dip"
                android:background="@drawable/ic_layout_bg"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dip"
                    android:gravity="center"
                    android:background="@color/view_micro_line_bg_color"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dip"
                        android:src="@mipmap/ic_message_icon" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dip"
                        android:gravity="center|left"
                        android:text="@string/contact" />
                </LinearLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:imeActionId="@+id/email"
                        android:imeActionLabel="@string/action_next"
                        android:textSize="@dimen/text_size_medium"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textColorHint="@color/color_app_bg"
                        android:textColor="@color/colorDarkGrey" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_no"
                        android:imeActionId="@+id/phone"
                        android:imeActionLabel="@string/action_next"
                        android:imeOptions="actionNext"
                        android:textSize="@dimen/text_size_medium"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:textColorHint="@color/color_app_bg"
                        android:textColor="@color/colorDarkGrey"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="375dip"
                android:padding="10dip"
                android:layout_margin="5dip"
                android:background="@drawable/ic_layout_bg"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dip"
                    android:gravity="center"
                    android:background="@color/view_micro_line_bg_color"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dip"
                        android:src="@mipmap/ic_address_icon"/>

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dip"
                        android:gravity="center|left"
                        android:text="@string/address" />
                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/company"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/company"
                        android:imeActionId="@+id/company"
                        android:imeActionLabel="@string/action_next"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textSize="@dimen/text_size_medium"
                        android:textColorHint="@color/color_app_bg"
                        android:textColor="@color/colorDarkGrey" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dip"
                        android:layout_weight="1"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/postalcode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/postal_code"
                            android:imeActionId="@+id/postalcode"
                            android:imeActionLabel="@string/action_next"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:maxLines="1"
                            android:textSize="@dimen/text_size_medium"
                            android:textColorHint="@color/color_app_bg"
                            android:textColor="@color/colorDarkGrey" />

                    </android.support.design.widget.TextInputLayout>


                    <Button
                        android:id="@+id/btnSearch"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:padding="5dp"
                        android:layout_gravity="bottom"
                        android:layout_alignParentRight="true"
                        android:text="Search" />
                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/unitno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Unitno"
                        android:imeActionId="@+id/unitno"
                        android:imeActionLabel="@string/action_next"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textSize="@dimen/text_size_medium"
                        android:textColorHint="@color/color_app_bg"
                        android:textColor="@color/colorDarkGrey"
                        />

                </android.support.design.widget.TextInputLayout>



                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/address1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address1"
                        android:imeActionId="@+id/address1"
                        android:imeActionLabel="@string/action_next"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textSize="@dimen/text_size_medium"
                        android:textColorHint="@color/color_app_bg"
                        android:textColor="@color/colorDarkGrey"
                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/address2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address2"
                        android:imeActionId="@+id/address2"
                        android:imeActionLabel="@string/action_done"
                        android:imeOptions="actionDone"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textSize="@dimen/text_size_medium"
                        android:textColorHint="@color/color_app_bg"
                        android:textColor="@color/colorDarkGrey"
                        />

                </android.support.design.widget.TextInputLayout>


            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</LinearLayout>
