<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="winapp.hajikadir.customer.activity.MyOrderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/search_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="visible"
            android:layout_marginBottom="5dip"
            android:background="@android:color/white"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:gravity="center">
                <TextView
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/prompt_start_date"
                    android:textColor="@color/colorDarkGrey"
                    android:layout_margin="5dip"
                    android:layout_height="match_parent"
                    android:ems="10" >

                </TextView>

                <TextView
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:text="@string/prompt_end_date"
                    android:layout_margin="5dip"
                    android:gravity="center"
                    android:textColor="@color/colorDarkGrey"
                    android:layout_height="match_parent"
                    android:ems="10" >

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dip"
                android:gravity="center">

                <TextView
                    android:id="@+id/fromDate"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_margin="5dip"
                    android:layout_weight="1"
                    android:background="@drawable/group_row"
                    android:ems="10"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/colorPrimary">

                </TextView>

                <TextView
                    android:id="@+id/toDate"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_margin="5dip"
                    android:layout_weight="1"
                    android:background="@drawable/group_row"
                    android:clickable="true"
                    android:ems="10"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/colorPrimary">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:id="@+id/filterSearch"
                    android:background="@color/color_app_bg"
                    android:layout_width="wrap_content"
                    android:layout_margin="5dip"
                    android:layout_height="40dip"
                    android:layout_gravity="center"
                    android:text="@string/prompt_search" />


            </LinearLayout>


        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:horizontalSpacing="5dp"
            android:scrollbars="vertical"
            android:stretchMode="columnWidth"
            android:verticalSpacing="5dp"
            android:visibility="visible" />


        <TextView
            android:id="@+id/empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:background="@android:color/white"
            android:text="@string/prompt_no_record_found"
            android:visibility="gone" />

    </LinearLayout>

    <include
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:visibility="visible"
        android:layout_gravity="bottom"
        android:id="@+id/bottom_sheet"
        app:layout_behavior="winapp.hajikadir.customer.util.QuickReturnFooterBehavior"
        layout="@layout/layout_bottom_sheet" />


</android.support.design.widget.CoordinatorLayout>